<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp"
        app:cardBackgroundColor="#AA989797"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNameScatter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/tv_name_scatter_string"
                android:textSize="@dimen/tv_ts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etNameScatter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:autofillHints="@string/et_name_scatter_text"
                android:ems="10"
                android:fontFamily="@font/happy_monkey"
                android:hint="@string/function"
                android:inputType="textPersonName"
                android:textSize="@dimen/et_ts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameScatter" />

            <TextView
                android:id="@+id/tvXAxis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/tv_x_axis_string"
                android:textSize="@dimen/tv_ts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNameScatter" />

            <EditText
                android:id="@+id/etXAxis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:ems="10"
                android:fontFamily="@font/happy_monkey"
                android:gravity="start|top"
                android:hint="@string/x_axis"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="@dimen/et_ts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvXAxis" />

            <TextView
                android:id="@+id/tvYAxis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/tv_y_axis_string"
                android:textSize="@dimen/tv_ts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etXAxis" />

            <EditText
                android:id="@+id/etYAxis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/happy_monkey"
                android:gravity="start|top"
                android:hint="@string/y_axis"
                android:inputType="textMultiLine"
                android:textSize="@dimen/et_ts"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYAxis" />

            <CheckBox
                android:id="@+id/cbDefaultValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/deafult"
                android:textSize="@dimen/tv_ts"
                app:layout_constraintEnd_toEndOf="@+id/etXAxis"
                app:layout_constraintTop_toBottomOf="@+id/etXAxis" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>